Included textidote suggestions

--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -11,8 +11,8 @@ The main objective during this research is to identify if commonly used legacy a
 \newline
 Therefore, microservices and some techniques such as self contained systems are introduced. Later on, the idea of event streams in system landscapes is explained.\newline
 Having elaborated those ideas, they will be adapted and combined into possible architectures. In this section there will be an in-depth discussion about the advantages and disadvantages of each technology.\newline
-Afterwards, there will be an outlook on the idea of Business Process Management. The underlying process driven architecture enables us to erase some of the previously shown disadvantages.\newline
+Afterwards, there will be an outlook on the idea of Business Process Management. The underlying process driven architecture enables us to erase some previously shown disadvantages.\newline
 \\
-This will result in the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data Warehouse architectures, a huge improvement concerning individual characteristics is possible even with relatively little effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.\newline 
+This will result in the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data Warehouse architectures, a huge improvement concerning individual characteristics is possible even with relatively little effort. This advance should lead to an optimised way of presenting various results to the user without increasing the system's complexity.\newline 
 In the end, the resulting architecture will be (as described in the title) a process-driven semi-event-based microservice system, enabling us to run data-intensive applications. \newline
 As we make progress in this field of research, we will make use of several other publications and expert interviews to underpin this paper. 
