--- a/004StateOfTheArtDWS.tex
+++ b/004StateOfTheArtDWS.tex
@@ -18,11 +18,11 @@ As Breslin states, ''Kimball's approach is a departure from traditional database
 \subsection{Architectural Classification According to the Arrangement of Data Marts}
 Next to the radical redesign of the hub and spoke architecture by Kimball's distributed data warehousing architecture, some alternatives regarding the organisation of data marts will be shown.\newline
 \\
-A central data warehouse consists of a single central instance with only one data mart which is used for all of the analysis. This can be beneficial when a company-wide overview is needed. On the downside, it is only possible to apply one data model to this data mart. For department-specific analysis this could result in a huge problem. \newline
+A central data warehouse consists of a single central instance with only one data mart which is used for all the analysis. This can be beneficial when a company-wide overview is needed. On the downside, it is only possible to apply one data model to this data mart. For department-specific analysis this could result in a huge problem. \newline
 Instead, a distributed data warehouse consists of multiple data marts which are specific to the department. Each of this additional data storages has a separate schema. Hence, the creation of a new one results in more work. One problem is the company-wide perspective, which will get lost. \newline
 A possible combination of the advantages from the two architectures above can be found in a central data warehouse with multiple distributed data marts. By applying this concept, it is possible to run company-wide analysis on the central data warehouse and to use data marts for the individual needs coming from various departments.
 \newline
-A last aspect which needs to be pointed out is the design aspects of dependent and independent data marts. Therefore lets first have a look at dependent ones. Those are built upon the core data warehouse and might contain additional or aggregated information. Nevertheless, the underlying \acrshort{cdw} ensures a consistency of the information distributed to the data marts. An independent data mart won't have such layer beneath. Due to that, the information inside might be duplicated and distinct to a certain degree. An advantage of using an independent architecture is the simplicity of creating these. \cite{scriptRasch} \newline
+A last aspect which needs to be pointed out is the design aspects of dependent and independent data marts. Therefore, let us first have a look at dependent ones. Those are built upon the core data warehouse and might contain additional or aggregated information. Nevertheless, the underlying \acrshort{cdw} ensures a consistency of the information distributed to the data marts. An independent data mart won't have such layer beneath. Due to that, the information inside might be duplicated and distinct to a certain degree. An advantage of using an independent architecture is the simplicity of creating these. \cite{scriptRasch} \newline
 \\
 This section should have shown the various design possibilities of data marts inside a corporate data warehouse System. By thinking about a modern adaption of DWS architectures, it is necessary to construct new data marts easily without losing the company-wide point of view and still enable departments to come up with their own requirements for analysis. 
 
