Minor fixes in bibtex, oath and evaluation

--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -21,7 +21,7 @@ In conclusion, the key features are contained within the SCS approach to DWS, th
 \subsection{Evaluation of this Architecture from an industrial Point of View}
 To verify the feasibility, the purpose and the improvements of this approach in contrast to the presented ones in chapter \ref{sec:referenceArchitecture} and \ref{sec:otherArchitectures} an interview is conducted. Before introducing the outcome guidelines and candidates need to be defined and chosen.
 
-\subsubsection{Design of Guidelines for Interview}
+\subsubsection{Guidelines for the Interview}
 These guidelines aim to define questions which should be answered by consulted experts. The overall aim is to ensure the benefits of this approach as well as en-lighting some weaknesses. 
 \begin{itemize}
     \item Can a benefit be seen within the adaptive orchestration of microservices by applying BPM?
