--- a/009DeclarationOfOath.tex
+++ b/009DeclarationOfOath.tex
@@ -1,7 +1,7 @@
 \section*{Declaration of Oath}
 \addcontentsline{toc}{section}{Declaration of Oath}
 
-Ich erkläre hiermit, dass ich die Projektarbeit mit dem Titel ''Verbesserung von Data Warehouse Systemen durch die Anwendung von prozess- und event- basierten Microservice Architekturen'' im Masterstudiengang VAWi selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel benutzt, Zitate kenntlich gemacht und die Arbeit noch keiner anderen Stelle zu Prüfungszwecken vorgelegt habe. \newline \\[0.5cm]
+Ich erkläre hiermit, dass ich die Projektarbeit mit dem Titel ''Verbesserung von Data-Warehouse-Systemen durch Anwendung von Konzepten der prozess- und ereignisgesteuerten Microservice-Architektur'' im Masterstudiengang VAWi selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel benutzt, Zitate kenntlich gemacht und die Arbeit noch keiner anderen Stelle zu Prüfungszwecken vorgelegt habe. \newline \\[0.5cm]
 Augsburg, den \today \newline \\[1cm]
 \hfill\parbox{4cm}{\hrule
 \strut \centering\footnotesize Thomas Heinrichs}
