--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,18 +1,18 @@
-@articel{dataIsOil,
-  title={The world’s most valuable resource is no longer oil, but data},
-  journal={The Economist},
-  year={2017},
-  month = {5}
+@article{dataIsOil,
+  Title     = {The world’s most valuable resource is no longer oil but data},
+  Journal   = {The Economist},
+  Year      = {2017},
+  Month     = {5}
 }
 
-@articel{KimbalVSInmon,
+@article{KimbalVSInmon,
     title       = {Data Warehousing Battle of the Giants: Comparing the Basics of the Kimball and Inmon Models}, author      = {Mary Breslin},
     journal     = {BUSINESS INTELLIGENCE JOURNAL},
     year        = {2004},
     pages       = {6-20}
 }
 
-@articel{dataCleansing,
+@article{dataCleansing,
     title   = {Data 101: What is Data Harmonization?},
     journal = {datorama},
     year    = {2017},
