Minor fixes - Hanno review

--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -4,7 +4,7 @@
     ''The world’s most valuable resource is no longer oil, but data'' \cite{dataIsOil}
 \end{quote}
 This was stated in an article published by ''The Economist'' in 2017 and it expresses quite well how important and valuable data currently is. In the past three years this thesis can definitively be validated. This can lead to negative incidents as seen in 2016 during the Brexit referendum or with the Cambridge Analytica scandal. A lot of companies try to generate customer benefits using historicised data.\newline
-To achieve this, there is a need for special systems handling an intensive amount of data. Basic requirements are the gathering of data from heterogeneous sources, the transformation and enrichment as well as the deployment for analytical applications. Of course non-functional requirements as performance or real-time actuation also necessary while talking about specifications.\newline
+To achieve this, there is a need for special systems handling an intensive amount of data. Basic requirements are the gathering of data from heterogeneous sources, the transformation and enrichment as well as the deployment for analytical applications. Of course non-functional requirements as performance or real-time actuation are also necessary while talking about specifications.\newline
 \\
 After pointing out the intent, the need for those systems and introducing the requirements, lets focus on the content. In this paper, the focus is set on architectural fundamentals which can be used for those systems. First the reference architecture of Data Warehouse Systems is introduced. Afterwards we will look at other commonly used architectures using some newer ideas.
 The main objective during this research is to identify if commonly used legacy architectures can be replaced by newer technology which come with some advantages.
