--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 \newacronym{rolap}{ROLAP}{Relational online analytical processing}
 \newacronym{sql}{SQL}{Structured Query Language}
 \newacronym{soa}{SOA}{Service-Oriented-Architectures}
-\newacronym{ci/cd}{CI/CD}{Constant Integration and Delivery}
+\newacronym{ci/cd}{CI/CD}{Continuous Integration and Delivery}
 \newacronym{ui}{UI}{User Interface}
 \newacronym{sla}{SLA}{Service Level Agreement}
 \newacronym{omg}{OMG}{Object Management Group}
