--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \newacronym{dws}{DWS}{Data Warehouse System}
 \newacronym{scs}{SCS}{Self-Contained-System}
 \newacronym{bpm}{BPM}{Business Process Management}
-\newacronym{bpmn}{BPMN}{Business Process Management Notation}
+\newacronym{bpmn}{BPMN}{Business Process Management and Notation}
 \newacronym{esb}{ESB}{Enterprise Service Bus}
 \newacronym{etl}{ETL}{Extract Transform Load}
 \newacronym{ods}{ODS}{Operational-Data-Store}
